home page projects fixed

--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -32,60 +32,59 @@ select {
   margin: 0 auto;
 }
 
-.about-content-grid-row2{
+.about-content-grid-row2 {
   display: flex;
   flex-direction: row;
   align-items: center;
   width: 95%;
   margin: 0 auto;
-  
+
   /* padding: 10px; */
 }
 
-.about-who-we-are{
+.about-who-we-are {
   color: white;
   flex: 1;
   margin: 0 1rem;
   z-index: 1;
   width: 90%;
-  background-color: #17202E;
+  background-color: #17202e;
   height: 100%;
   padding: 2rem;
   border-radius: 20px;
 }
 
-.about-mission{
+.about-mission {
   color: white;
   flex: 1;
   margin: 0 1rem;
   z-index: 1;
   width: 90%;
-  background-color: #17202E;
+  background-color: #17202e;
   height: 100%;
   padding: 2rem;
   border-radius: 20px;
 }
 
-
-.abuot-card-title{
+.abuot-card-title {
   display: flex;
   align-items: center;
   margin-bottom: 1rem;
 }
 
-.about-vision{
+.about-vision {
   color: white;
   flex: 0.96;
   margin: 0 1rem;
   z-index: 1;
   width: 50%;
-  background-color: #17202E;
+  background-color: #17202e;
   height: 100%;
   padding: 2rem;
   border-radius: 20px;
 }
 
-.about_row2{
+.about_row2 {
   width: fit-content;
   display: flex;
   flex-direction: row;
@@ -96,18 +95,18 @@ select {
   /* flex-wrap: wrap; */
 }
 
-.memberalumni{
+.memberalumni {
   display: flex;
   flex-direction: column;
   flex: 1;
 }
-.projectachieve{
+.projectachieve {
   display: flex;
   flex-direction: column;
   flex: 1;
   width: 100%;
 }
-.about-content-grid-boxes{
+.about-content-grid-boxes {
   width: 95%;
   height: 50%;
   padding: 1.6rem;
@@ -115,19 +114,19 @@ select {
   z-index: 1;
 }
 
-.memberalumni :first-child{
+.memberalumni :first-child {
   margin-bottom: 1rem;
 }
 
-.projectachieve :first-child{
+.projectachieve :first-child {
   margin-bottom: 1rem;
 }
 
-.projectachieve .about-content-grid-boxes{
+.projectachieve .about-content-grid-boxes {
   width: 100%;
 }
 
-.about-department-text p{
+.about-department-text p {
   padding: 1rem;
 }
 
@@ -267,46 +266,10 @@ select {
   margin-right: 0;
 }
 
-
-<<<<<<< HEAD
-.about-content-grid-row2 {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  /* padding: 10px; */
-}
 .row1 {
   width: 70%;
   height: 50%;
 }
-
-.about-content-grid-boxes {
-  width: 90%;
-  height: 50%;
-  margin-right: 1.5rem;
-  padding: 1.6rem;
-  border-radius: 0.5rem;
-  z-index: 1;
-  margin-bottom: 15px;
-}
-.about_row2 {
-  display: flex;
-  flex-direction: row;
-  /* flex-wrap: wrap; */
-}
-=======
-
-
-.row1{
-    width: 70%;
-    height: 50%;
-}
-
->>>>>>> ab18f7f610c4eba2d001c09ea34c9aafff133047
-
-
-
-
 
 .about-content-grid.quote {
   background-repeat: no-repeat;
@@ -314,12 +277,7 @@ select {
   z-index: 1;
 }
 
-<<<<<<< HEAD
-.about-content-grid .about-content-title {
-=======
-
 .about-content-title {
->>>>>>> ab18f7f610c4eba2d001c09ea34c9aafff133047
   margin-top: 1%;
   font-size: 2rem;
   font-weight: var(--fw-400);
@@ -328,20 +286,12 @@ select {
   font-family: "Rowdies", cursive;
   margin-left: 20px;
 }
-<<<<<<< HEAD
 .about-content-text {
-  font-size: 25px;
-  opacity: 0.5;
-}
-.about-content-count-sub {
-=======
-.about-content-text{
   font-size: 1.1rem;
   opacity: 0.8;
 }
 
-.about-content-count-sub{
->>>>>>> ab18f7f610c4eba2d001c09ea34c9aafff133047
+.about-content-count-sub {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: white;
   font-size: 1.6rem;
@@ -409,13 +359,8 @@ select {
   padding: 2rem;
   border-radius: 1.2rem;
   border-style: solid 4px;
-<<<<<<< HEAD
-  border-color: rgb(89, 233, 238);
-=======
   border-color: #56b6fc;
   /* border-color: rgb(89, 233, 238); */
-
->>>>>>> ab18f7f610c4eba2d001c09ea34c9aafff133047
 }
 
 .about-department-text {
@@ -435,40 +380,33 @@ select {
   margin-top: -3rem;
 }
 
-<<<<<<< HEAD
 @media (max-width: 780px) {
   .about-content {
-=======
-@media(max-width: 780px)
-{
-    .about-content{
-       display: flex;
-       flex-wrap: wrap;
-    }
-    .content-grid-width{
-      width: 100%;
-      word-wrap: break-word;
-    }
-    .about-content-grid{
-      margin-top: 10px;
-    }
-    .about-content-grid-row2{
-        display: flex;
-       flex-wrap: wrap;
-      }
-    .abuot-card-title{
-      width: 40%;
-    }
-    .about-who-we-are{
-      width: 100%;
-      margin: aut;
-    }
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .content-grid-width {
+    width: 100%;
+    word-wrap: break-word;
+  }
+  .about-content-grid {
+    margin-top: 10px;
+  }
+  .about-content-grid-row2 {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .abuot-card-title {
+    width: 40%;
+  }
+  .about-who-we-are {
+    width: 100%;
+    margin: aut;
+  }
 }
 
-@media(max-width: 900px)
-{
-  .about-department-grid{
->>>>>>> ab18f7f610c4eba2d001c09ea34c9aafff133047
+@media (max-width: 900px) {
+  .about-department-grid {
     display: flex;
     flex-wrap: wrap;
   }
@@ -529,13 +467,8 @@ select {
   }
 }
 
-<<<<<<< HEAD
 .about-subheading2 {
-  margin-top: 80px;
-=======
-.about-subheading2{
   margin-top: 150px;
->>>>>>> ab18f7f610c4eba2d001c09ea34c9aafff133047
 }
 
 @media (max-width: 400px) {
