project button fixed

--- a/src/Components/Home Projects/Project-home.css
+++ b/src/Components/Home Projects/Project-home.css
@@ -302,7 +302,7 @@
 }
 .project-button:hover {
   color: #ffffff;
-  background-color: #0d3242;
+  background-color: #0e131b;
 }
 .project-button:hover .arrow {
   opacity: 1;
