landing slide animation testing

--- a/src/Components/LandingSlide/LandingSlide.css
+++ b/src/Components/LandingSlide/LandingSlide.css
@@ -11,6 +11,10 @@
   height: 35vh;
 }
 
+.draic-logo:hover {
+  animation: logoAnimHover 0.8s both;
+}
+
 .text {
   font-weight: 500;
   font-size: 5rem;
@@ -18,6 +22,7 @@
   font-family: "Rowdies", cursive;
   /* font-family: "orbitron"; */
 }
+
 @media (max-width: 1000px) {
   .draic-logo {
     height: 25vh;
@@ -27,7 +32,6 @@
   }
 }
 @media (max-width: 768px) {
-
   .landing-slide {
     padding: 0;
     flex-direction: column-reverse;
@@ -46,3 +50,32 @@
   }
 }
 
+@keyframes logoAnimHover {
+  0%,
+  100% {
+    -webkit-transform: translateX(0%);
+    transform: translateX(0%);
+    -webkit-transform-origin: 50% 50%;
+    transform-origin: 50% 50%;
+  }
+  15% {
+    -webkit-transform: translateX(-30px) rotate(-6deg);
+    transform: translateX(-30px) rotate(-6deg);
+  }
+  30% {
+    -webkit-transform: translateX(15px) rotate(6deg);
+    transform: translateX(15px) rotate(6deg);
+  }
+  45% {
+    -webkit-transform: translateX(-15px) rotate(-3.6deg);
+    transform: translateX(-15px) rotate(-3.6deg);
+  }
+  60% {
+    -webkit-transform: translateX(9px) rotate(2.4deg);
+    transform: translateX(9px) rotate(2.4deg);
+  }
+  75% {
+    -webkit-transform: translateX(-6px) rotate(-1.2deg);
+    transform: translateX(-6px) rotate(-1.2deg);
+  }
+}
