--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -105,8 +105,8 @@
   border-radius: 12px;
 }
 .footer_social_img:hover {
-  transform: rotate(360deg);
-  box-shadow: 0px 0px 2px 4px #0ff;
+  transform: scale(1.1);
+  /* box-shadow: 0px 0px 2px 4px #0ff; */
 }
 .footer_copyrights {
   text-align: center;
