description made grid

--- a/src/Components/Home About Us/Home-aboutus.css
+++ b/src/Components/Home About Us/Home-aboutus.css
@@ -114,8 +114,8 @@
 }
 
 .thirdrow {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   text-align: left;
   padding: 20px;
   padding-bottom: 40px;
