--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -85,11 +85,35 @@
 
 .neumeric-info-row-1{
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    height: 95%;
+    /* justify-content: center; */
 }
+
+.neumeric-info-row-1 :nth-child(1),.neumeric-info-row-1 :nth-child(2){
+    flex: 1;
+}
+.neumeric-info-row-1 :nth-child(1){
+    margin-top: 0.1rem;
+}
+
 .neumeric-info-row-2{
     margin-left: 1rem;
     flex: 1;
+    display: flex; 
+    flex-direction: column;
+    height: 95%;
+    /* justify-content: center; */
 }
+
+.neumeric-info-row-2 :nth-child(1),.neumeric-info-row-2 :nth-child(2){
+    flex: 1;
+}
+.neumeric-info-row-2 :nth-child(1){
+    margin-top: 0.1rem;
+}
+
 
 .about-department-grid{
     display: grid;
