--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -1,5 +1,5 @@
 /* CONTACT FORM MAIN HEADLINES */
-.contact_main_body {
+.contact_main_body{
   margin-top: -6rem;
   background-color: rgba(10, 25, 49, 0.8);
   position: relative;
@@ -7,6 +7,11 @@
   height: auto;
   padding-top: 6.5rem;
   padding-bottom: 0.3rem;
+}
+.contact_main_body2{
+    background-color: rgba(10, 25, 49, 0.8);
+    height: auto;
+    padding-bottom: 0.3rem;
 }
 .contact_headline_div {
   text-align: center;
@@ -83,7 +88,10 @@ input[type="email"] {
   margin-top: 10px;
 }*/
 
-.contact_sendbtn {
+.contact_para{
+    color: white;
+}
+.contact_sendbtn{
   margin-top: 10px;
   background-color: #2196f3;
   padding: 10px;
@@ -93,7 +101,17 @@ input[type="email"] {
   width: 30%;
   transition: all 0.3s ease;
 }
-.contact_sendbtn:hover {
+.contact_joinnowbtn{
+  margin-top: 10px;
+  background-color: #0d8bf1;
+  padding: 10px;
+  color: white;
+  border: 2px solid #0d8bf1;
+  border-radius: 20px;
+  width: 30%;
+  transition: all 0.3s ease;
+}
+.contact_sendbtn:hover, .contact_joinnowbtn:hover {
   border: 2px solid rgb(0, 162, 255);
   background-color: rgb(31, 30, 30);
   color: rgb(237, 240, 241);
@@ -162,6 +180,12 @@ img {
   display: inline;
   position: relative;
 }
+.contact_para{
+  position: relative;
+  width: 40vw;
+  margin: 5px;
+  margin-bottom: 20px;
+}
 .contact_all_information {
   font-family: "Open Sans", sans-serif;
   font-size: medium;
@@ -198,7 +222,7 @@ img {
     width: 72vw;
     margin: 5px 0px;
   }
-  .contact_form_name {
+  .contact_form_name{
     position: relative;
     /* width: 100%; */
   }
