our team updated

--- a/src/Components/About/components/neumericinfo.css
+++ b/src/Components/About/components/neumericinfo.css
@@ -3,6 +3,7 @@
     padding: 1.2rem 2rem;
     border-radius: 10px;
     margin-bottom: 1rem;
+    /* margin: 0; */
 }
 .neumeric-card-title{
     color: white;
