--- a/src/Components/Home Projects/Project-home.css
+++ b/src/Components/Home Projects/Project-home.css
@@ -176,7 +176,7 @@
   text-align: center;
   color: #719fb0;
   font-weight: bold;
-  background-color: #17202e;
+  /* background-color: #17202e; */
   border: none;
   border-radius: 0.4rem;
   transition: 0.2s;
@@ -288,7 +288,7 @@
 }
 
 .project-button {
-  background-color: transparent;
+  background-color: #17202E;
   border: none;
   color: #57b8ff;
   transition: all 0.3s ease;
