--- a/src/Components/Contact2/contact2.css
+++ b/src/Components/Contact2/contact2.css
@@ -27,8 +27,8 @@
 
 .contact-btn-all:hover .contact_btn_home{
     background-color: white;
-    border: 2px solid #00a0ff;
-    border-right: none;
+    /* border: 2px solid #00a0ff; */
+    /* border-right: none; */
 }
 .contact-btn-all:hover .contact-us-btn-text{
     color: #00a0ff;
