testimonials responsive done

--- a/src/Components/Contact2/contact2.css
+++ b/src/Components/Contact2/contact2.css
@@ -36,6 +36,6 @@
 .contact-btn-all:hover .contact-us-btn-text {
   color: #00a0ff;
 }
-.contact-btn-container {
-  /* padding: 200px; */
-}
+/* .contact-btn-container {
+   padding: 200px; 
+} */
