--- a/src/Components/CoreTeam/card.css
+++ b/src/Components/CoreTeam/card.css
@@ -12,6 +12,7 @@
   top: -100px;
   text-align: left;
   padding-left: 20px;
+  text-shadow: 2px 2px 20px  #000000;
 }
 .ll {
   height: 4px;
@@ -30,6 +31,8 @@
   text-align: left;
   padding-left: 20px;
   color: white;
+  text-shadow: 2px 2px 20px  #000000;
+
 }
 
 .core_team_social_img {
