--- a/src/Components/Projects/Project.css
+++ b/src/Components/Projects/Project.css
@@ -27,11 +27,19 @@
   border: 2px solid black;
 }
 
-.project-header {
-  padding-top: 10.4rem;
+.project-headerupcoming{
+  padding-top: 12.4rem;
   text-align: center;
   margin-bottom: 30px;
 }
+
+
+.project-header {
+  padding-top: 0.4rem;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
 
 .project-moto {
   font-family: "Roboto Condensed", sans-serif;
@@ -71,9 +79,11 @@
   margin-right: 0;
 }
 .projectsupcomingcontainer{
-  margin-top: 5rem;
+  margin: 0 40px;
   display: flex;
   align-items: left;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .project-line2 {
