--- a/src/Components/Testimonials/Testimonials.css
+++ b/src/Components/Testimonials/Testimonials.css
@@ -76,7 +76,7 @@
 .testimonial-para {
   word-spacing: 5px;
   color: rgb(114, 114, 114);
-  font-family: SansationLight;
+  font-family: "Rowdies", cursive;
   padding-left: 24px;
 }
 .carousel-root {
@@ -131,7 +131,7 @@
   text-transform: uppercase;
   font-size: 17px;
   margin-top: 20px;
-  font-family: SansationBold;
+  font-family: "Rowdies", cursive;
 }
 
 .myCarousel h4 {
@@ -142,7 +142,7 @@
   color: rgb(255, 255, 255);
   font-size: 14px;
   margin-top: 20px;
-  font-family: SansationLight;
+  font-family: "Rowdies", cursive;
 }
 
 .myCarousel p {
@@ -150,7 +150,7 @@
   line-height: 29px !important;
   color: rgb(255, 255, 255);
   font-size: 16px;
-  font-family: SansationBold;
+  font-family: "Rowdies", cursive;
   max-height: 67px;
   position: relative;
   margin-top: 50px;
