--- a/src/Components/Team/team.css
+++ b/src/Components/Team/team.css
@@ -74,7 +74,7 @@
 .about-department-grid-box{
     /* border: 2px solid #56b6fc; */
     transition: all 0.3s ease;
-    background-color: #17202E;
+    background-color: rgb(20,20,20);;
     text-align: left;
 }
 
