--- a/src/Components/Testimonials/Testimonials.css
+++ b/src/Components/Testimonials/Testimonials.css
@@ -1,7 +1,10 @@
 .testimonial-section-container {
-  background-color: #454545;
-  height: auto;
-  padding-bottom: 50px;
+  background: rgba(20, 24, 32, 0.9);
+
+  position: relative;
+  z-index: 100;
+  padding-bottom: 150px;
+  
 }
 .testimonial_header {
   /* padding-top: 10.4rem; */
@@ -152,9 +155,10 @@
   font-size: 16px;
   font-family: "Rowdies", cursive;
   max-height: 67px;
+  
   position: relative;
-  margin-top: 50px;
-  width: 100%;
+  margin: 50px auto;
+  width: 50%;
 }
 
 .myCarousel p:before {
@@ -221,8 +225,9 @@
   font-size: 22px;
 }
 .testimonial-card-container {
-  background-color: #222;
+  background: rgba(20, 24, 32, 0.9);
   border-radius: 20px;
+  position: relative;
 }
 
 @media only screen and (max-width: 768px) {
