testimonial fixed and projects btn fixed

--- a/src/Components/Home Projects/Project-home.css
+++ b/src/Components/Home Projects/Project-home.css
@@ -288,11 +288,11 @@
 }
 
 .project-button {
-  background-color: #17202E;
+  background-color: #17202e;
   border: none;
   color: #57b8ff;
   transition: all 0.3s ease;
-  padding: 5px 10px;
+  /* padding: 5px 10px; */
   border-radius: 20px;
   cursor: pointer;
 }
