--- a/src/Components/Testimonials/Testimonials.css
+++ b/src/Components/Testimonials/Testimonials.css
@@ -3,8 +3,7 @@
 
   position: relative;
   z-index: 100;
-  padding-bottom: 150px;
-  
+  padding-bottom: 160px;
 }
 .testimonial_header {
   /* padding-top: 10.4rem; */
@@ -126,7 +125,7 @@
 }
 
 .myCarousel h3 {
-  color: rgb(255, 255, 255);
+  color: #57b8ff;
   font-weight: 100;
   letter-spacing: 0.2px;
   margin-bottom: 4px;
@@ -139,13 +138,15 @@
 
 .myCarousel h4 {
   text-transform: uppercase;
-  margin-top: 0;
-  padding-top: 0;
+  /* margin-top: 0; */
+  /* padding-top: 0; */
   font-weight: 500;
   color: rgb(255, 255, 255);
   font-size: 14px;
-  margin-top: 20px;
+  margin-top: 10px;
   font-family: "Rowdies", cursive;
+  font-family: "Open Sans Condensed", sans-serif;
+  letter-spacing: 3px;
 }
 
 .myCarousel p {
@@ -154,14 +155,15 @@
   color: rgb(255, 255, 255);
   font-size: 16px;
   font-family: "Rowdies", cursive;
-  max-height: 67px;
-  
+  font-family: SansationLight;
+  /* max-height: 67px; */
+
   position: relative;
-  margin: 50px auto;
-  width: 50%;
+  margin: 25px auto;
+  /* width: 50%; */
 }
 
-.myCarousel p:before {
+/* .myCarousel p:before {
   content: "“";
   color: #aaaaaa5d;
   font-size: 260px;
@@ -182,7 +184,7 @@
   position: absolute;
   right: -30px;
   top: 150px;
-}
+} */
 
 .carousel .control-dots .dot {
   box-shadow: none !important;
@@ -228,9 +230,17 @@
   background: rgba(20, 24, 32, 0.9);
   border-radius: 20px;
   position: relative;
+  margin-top: 30px;
 }
 
 @media only screen and (max-width: 768px) {
+  .testimonial-section-container {
+    padding-bottom: 120px;
+  }
+  .myCarousel p {
+    line-height: 15.6px !important;
+    width: auto;
+  }
   .carousel-root {
     outline: 0;
     width: 93% !important;
@@ -251,7 +261,7 @@
     padding-left: 5%;
     padding-right: 5%;
     /* border: 1px solid #ddd; */
-    height: 300px;
+    height: 390px;
   }
 
   .carousel .slide img {
