updates teacher hover

--- a/src/Components/Teacher/Teacher.css
+++ b/src/Components/Teacher/Teacher.css
@@ -90,10 +90,16 @@
   display: flex;
   margin: auto;
   justify-content: flex-start;
+  column-gap: 1.3rem;
 }
 
 .teacher_social_img{
-    padding: 10px;
+  margin-left:-15px;
+  transition: all 0.5s ease;  
+}
+
+.teacher_social_img:hover{
+  transform: scale(1.2);
 }
 
 
@@ -152,7 +158,7 @@
     height: 19rem;
   }
   
-  .teacher-footer{
+  .teacher{
     display: flex;
     margin: auto;
     justify-content: center;
