--- a/src/Components/Department/electrical-department.css
+++ b/src/Components/Department/electrical-department.css
@@ -166,7 +166,11 @@
 }
 
 .profile-card .text img {
-    height: 150px;
+    min-height: 150px;
+    min-width: 150px;
+    max-height: 150px;
+    max-width: 150px;
+    
     border-radius: 50%;
     margin-bottom: 10px;
     position: relative;
@@ -174,6 +178,7 @@
     z-index: 6;
     margin-bottom: 2rem;
     margin-top: 1.5rem;
+    background-size: cover;
 }
 
 .profile-card .text h3 {
