--- a/src/Components/Department/mechanical-department.css
+++ b/src/Components/Department/mechanical-department.css
@@ -204,7 +204,11 @@ padding-left: 4rem ;
 }
 
 .profile-card .text img {
-    height: 150px;
+    min-height: 150px;
+    min-width: 150px;
+    max-height: 150px;
+    max-width: 150px;
+    
     border-radius: 50%;
     margin-bottom: 10px;
     position: relative;
@@ -212,6 +216,7 @@ padding-left: 4rem ;
     z-index: 6;
     margin-bottom: 2rem;
     margin-top: 1.5rem;
+    background-size: cover;
 }
 
 .profile-card .text h3 {
